--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,27 @@
+# Unity Cache Folders
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
 
-.DS_Store
-.DS_Store
-.DS_Store
-Assets/.DS_Store
-Assets/.DS_Store
-.vs/MinecraftECS/xs/sqlite3/db.lock
-.vs/MinecraftECS/xs/sqlite3/storage.ide
-.vs/MinecraftECS/xs/sqlite3/storage.ide-shm
-.vs/MinecraftECS/xs/sqlite3/storage.ide-wal
-.vs/MinecraftECS/xs/UserPrefs.xml
-Assets/.DS_Store
+# IDE cache folders
+.vs/
+.vscode/
+.idea/
+
+# OS Cahce files
+*.DS_Store
+
+# Project and solution files
+*.csproj
+*.unityproj
+*.sln
+*.suo
+*.tmp
+*.user
+*.userprefs
+*.pidb
+*.booproj
+*.svd
+*.pdb
