--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
-    "com.unity.analytics": "2.0.16",
-    "com.unity.entities": "0.0.12-preview.21",
-    "com.unity.incrementalcompiler": "0.0.42-preview.30",
-    "com.unity.package-manager-ui": "1.9.11",
+    "com.unity.entities": "0.1.0-preview",
+    "com.unity.ide.rider": "1.0.8",
+    "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.rendering.hybrid": "0.1.0-preview",
+    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
