--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.entities": "0.1.0-preview",
     "com.unity.ide.rider": "1.0.8",
     "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.physics": "0.2.0-preview",
     "com.unity.rendering.hybrid": "0.1.0-preview",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.ugui": "1.0.0",
